cmake_minimum_required(VERSION 3.22)
project(Assignment C)

set(CMAKE_C_STANDARD 99)

add_executable(Problem_1 Problem_1.c)
add_executable(Problem_2 Problem_2.c)
add_executable(Problem_3 Problem_3.c)
add_executable(Problem_4 Problem_4.c)
add_executable(Problem_5 Problem_5.c)
add_executable(Problem_6 Problem_6.c)
add_executable(Problem_7 Problem_7.c)
add_executable(Problem_8 Problem_8.c)
add_executable(Problem_9 Problem_9.c)
add_executable(Problem_10 Problem_10.c)
add_executable(Problem_11 Problem_11.c)
add_executable(Problem_12 Problem_12.c)
add_executable(Problem_13 Problem_13.c)
