cmake_minimum_required(VERSION 3.23)
project(Lectures C)

set(CMAKE_C_STANDARD 11)

add_executable(Lecture11_Page7  Lecture11_Page7.c)
add_executable(Lecture11_Page10  Lecture11_Page10.c)
add_executable(Lecture11_Page14  Lecture11_Page14.c)
add_executable(Lecture11_Page15  Lecture11_Page15.c)
add_executable(Lecture13_Page10  Lecture13_Page10.c)
add_executable(Lecture14_Page9  Lecture14_Page9.c)
add_executable(Lecture14_Page12  Lecture14_Page12.c)
add_executable(Lecture14_Page13  Lecture14_Page13.c)
add_executable(Lecture15_Page3  Lecture15_Page3.c)
