cmake_minimum_required(VERSION 3.23)
project(007_Searching_and_Strings C)

set(CMAKE_C_STANDARD 11)

add_executable(Lecture16_Page5 Lecture16_Page5.c)
add_executable(Lecture16_Page7 Lecture16_Page7.c)
add_executable(Lecture16_Page8 Lecture16_Page8.c)
add_executable(Lecture16_Page9 Lecture16_Page9.c)
add_executable(Lecture16_Page10 Lecture16_Page10.c)
add_executable(Lecture16_Page13 Lecture16_Page13.c)
add_executable(Lecture16_Page14 Lecture16_Page14.c)
add_executable(Lecture16_Page15 Lecture16_Page15.c)
add_executable(Lecture16_Page16 Lecture16_Page16.c)