cmake_minimum_required(VERSION 3.23)
project(Assignment C)

set(CMAKE_C_STANDARD 11)

add_executable(Question_1 Question_1.c)
add_executable(Question_2 Question_2.c)
add_executable(Question_3 Question_3.c)
add_executable(Question_4 Question_4.c)
add_executable(Question_5 Question_5.c)
add_executable(Question_6 Question_6.c)
add_executable(Question_7 Question_7.c)
add_executable(Question_8 Question_8.c)
add_executable(Question_9 Question_9.c)
add_executable(Question_10 Question_10.c)
add_executable(Question_11 Question_11.c)
